--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -1,44 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calorie Tracker</title>
-    <link rel="stylesheet" href="/static/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calorie Tracker - Recipes</title>
+  <link rel="stylesheet" href="/static/styles.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
-        <div class="container-fluid justify-content-between">
-          <a class="navbar-brand" href="/">NutriTrack</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/goals">Goals</a>              
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/recipes">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-              </li>
-              <li class="nav-item">
-                <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
-            </li>
-            </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
+    <div class="container-fluid justify-content-between">
+      <a class="navbar-brand" href="/">NutriTrack</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/goals">Goals</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/recipes">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+          <li class="nav-item">
+            <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2">Sign Out</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container py-5">
+    <h1 class="text-center mb-4">Your Saved Recipes</h1>
+    <div id="recipesContainer" class="row g-4">
+      <!-- Cards go here -->
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    async function loadRecipes() {
+      const response = await fetch("http://localhost:8000/recipes/");
+      const recipes = await response.json();
+
+      const container = document.getElementById("recipesContainer");
+      container.innerHTML = "";
+
+      if (recipes.length === 0) {
+        container.innerHTML = `<p class="text-center">No recipes found.</p>`;
+        return;
+      }
+
+      recipes.forEach(recipe => {
+        const col = document.createElement("div");
+        col.className = "col-md-6 col-lg-4";
+
+        const card = `
+          <div class="card shadow-sm h-100 border rounded p-3">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-3">${recipe.title}</h5>
+              <div class="mb-2 overflow-auto" style="max-height: 150px;">
+                <strong>Ingredients:</strong>
+                <p class="mb-0 small" style="white-space: pre-wrap;">${recipe.ingredients}</p>
+              </div>
+              <div class="overflow-auto" style="max-height: 150px;">
+                <strong>Instructions:</strong>
+                <p class="mb-0 small" style="white-space: pre-wrap;">${recipe.instructions}</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </nav>
+        `;
 
-      <h1>Recipes Page</h1>
-      <script src="static/main.js"></script>
+        col.innerHTML = card;
+        container.appendChild(col);
+      });
+    }
 
-    </body>
-    </html>
+    function logout() {
+      localStorage.removeItem("token");
+      window.location.href = "/login";
+    }
+
+    window.addEventListener("DOMContentLoaded", loadRecipes);
+  </script>
+</body>
